# McuControl.App

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ApiGenerator/: CMakeLists.txt
Interfaces/: McuControl.h  MicroNetwork.Common.h  MicroNetwork.Host.h  MicroNetwork.Task.MemoryAccess.IDeviceToHost.Serializer.In.h  MicroNetwork.Task.MemoryAccess.IDeviceToHost.Serializer.Out.h  MicroNetwork.Task.MemoryAccess.IHostToDevice.Serializer.In.h  MicroNetwork.Task.MemoryAccess.IHostToDevice.Serializer.Out.h  MicroNetwork.Task.MemoryAccess.IStream.IoStreamDescriptor.h  MicroNetwork.Task.MemoryAccess.h  MicroNetwork.User.h
Src/: Main.cpp
